@@ -74,6 +74,6 @@ public class GetApplicationController extends ContextHandlerController {
         return new ModelAndView(getViewName())
                 .addObject("app", app)
                 .addObject("no_resources", Boolean.valueOf(!getContainerWrapper().getResourceResolver().supportsPrivateResources()))
-                .addObject("collectionPeriod", Long.valueOf(getCollectionPeriod()));
+                .addObject("collectionPeriod", new Long(getCollectionPeriod()));
     }
 }
